# aiopixooapi

./: README.md  generate_dicts.py  main.py  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml  python-release.yml
src/aiopixooapi/: __init__.py  base.py  divoom.py  exceptions.py  pixoo.py  pixoo64.py  pixoo64_dicts.py
tests/: test_divoom.py  test_pixoo.py  test_pixoo64.py
