[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopixooapi"
version = "0.1.0"
description = "Asynchronous Python library for Divoom Pixoo64 LED display"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0"
authors = [
    { name = "Koen Dierckx", email = "koen.dierckx@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "aiohttp>=3.9.0",
]
[project.urls]
Homepage = "https://github.com/yourusername/aiopixooapi"
Documentation = "https://github.com/yourusername/aiopixooapi#readme"
Repository = "https://github.com/yourusername/aiopixooapi.git"
Issues = "https://github.com/yourusername/aiopixooapi/issues" 
