[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiopixooapi"
version = "0.1.0"
description = "Asynchronous Python library for Divoom Pixoo64 LED display"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0"
authors = [
    { name = "Koen Dierckx", email = "koen.dierckx@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "aioresponses",
    "flake8",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/KoenDierckx/aiopixooapi"
Documentation = "https://github.com/KoenDierckx/aiopixooapi#readme"
Repository = "https://github.com/KoenDierckx/aiopixooapi.git"
Issues = "https://github.com/KoenDierckx/aiopixooapi/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN201", # Missing type annotation for function argument
    "ANN202", # Missing return type annotation
    "ANN204", # Missing type annotation for `self` or `cls`
    "FA100",  # Avoid using `assert` statements
    "G004",   # Unused loop variable
    "INP001", # Input function detected
    "PLR0913",# Unnecessary `else` after `return`
    "PLR2004",# Unnecessary `pass` statement
    "S101",   # Use of `assert` detected
]
